--- a/index.html
+++ b/index.html
@@ -403,6 +403,7 @@
                     const layoutBg = layoutXmlDoc ? parseBackground(layoutXmlDoc, slideContext) : null;
                     const masterBg = masterXmlDoc ? parseBackground(masterXmlDoc, slideContext) : null;
                     const finalBg = slideBg || layoutBg || masterBg;
+                    console.log({ slideBg, layoutBg, masterBg, finalBg });
 
                     const slideContainer = document.createElement( 'div' );
                     slideContainer.className = 'slide-viewer';
@@ -1300,12 +1301,9 @@
                     }
                 }
 
-                console.log(`Processing paragraph with ${pNode.childNodes.length} children...`);
                 for (const childNode of pNode.childNodes) {
-                    console.log(`... found child node: ${childNode.nodeName}`);
                     if (childNode.localName === 'r' || childNode.localName === 'fld') {
                         const text = childNode.textContent;
-                        console.log(`...... It's a text run. Content: "${text}"`);
                         if (!text) continue;
 
                         const rPr = childNode.getElementsByTagNameNS(DML_NS, 'rPr')[0];
