Added masterData log for debugging

--- a/index.html
+++ b/index.html
@@ -376,6 +376,7 @@
                             masterStaticShapes = masterData.staticShapes;
                             defaultTextStyles = masterData.defaultTextStyles;
                             slideContext.colorMap = masterData.colorMap;
+                            console.log({ masterData });
                         }
 
                         let layoutData;
