Added hex logging for debugging

--- a/index.html
+++ b/index.html
@@ -663,6 +663,7 @@
 
         function hexToRgb(hex) {
             const result = /^#?([a-f\d]{2})([a-f\d]{2})([a-f\d]{2})$/i.exec(hex);
+            console.log({ hex });
             return result ? {
                 r: parseInt(result[1], 16),
                 g: parseInt(result[2], 16),
