Added hex and colorObj logging for debugging

--- a/index.html
+++ b/index.html
@@ -663,7 +663,6 @@
 
         function hexToRgb(hex) {
             const result = /^#?([a-f\d]{2})([a-f\d]{2})([a-f\d]{2})$/i.exec(hex);
-            console.log({ hex });
             return result ? {
                 r: parseInt(result[1], 16),
                 g: parseInt(result[2], 16),
@@ -756,6 +755,7 @@
                     }
                 }
                 return hex;
+                console.log({ colorObj, hex });
             }
 
             return null; // Return null if color can't be resolved
