--- a/index.html
+++ b/index.html
@@ -1705,19 +1705,8 @@
             const txBody = shape.getElementsByTagNameNS(PML_NS, 'txBody')[0];
             const isTextPlaceholder = phKey && txBody;
 
-            let finalFill;
-            if (isTextPlaceholder) {
-                finalFill = slideShapeProps.fill ?? 'none';
-            } else {
-                finalFill = slideShapeProps.fill ?? layoutShapeProps.fill ?? masterShapeProps.fill;
-            }
-
-            let finalStroke;
-            if (isTextPlaceholder) {
-                finalStroke = slideShapeProps.stroke ?? null;
-            } else {
-                finalStroke = slideShapeProps.stroke ?? layoutShapeProps.stroke ?? masterShapeProps.stroke;
-            }
+            const finalFill = slideShapeProps.fill ?? layoutShapeProps.fill ?? masterShapeProps.fill;
+            const finalStroke = slideShapeProps.stroke ?? layoutShapeProps.stroke ?? masterShapeProps.stroke;
 
             const shapeProps = {
                 geometry: slideShapeProps.geometry ?? layoutShapeProps.geometry ?? masterShapeProps.geometry,
