Changed emu/px to account for higher DPI

--- a/index.html
+++ b/index.html
@@ -206,8 +206,8 @@
         } from "https://deno.land/x/zipjs/index.js";
         import Konva from 'https://cdn.jsdelivr.net/npm/konva@9.3.6/+esm';
 
-        const EMU_PER_PIXEL = 9525; // Standard conversion for 96 DPI
-        const PT_TO_PX = 1.25; // Adjusted conversion for web rendering (90/72)
+        const EMU_PER_PIXEL = 12700; // Standard conversion for 96 DPI
+        const PT_TO_PX = .975; // Adjusted conversion for web rendering (90/72)
         const LINE_HEIGHT = 24; // A default line height in pixels for SVG text
         const INDENTATION_AMOUNT = 30; // Pixels per indentation level
         const BULLET_OFFSET = 20; // Space between bullet and text
