Handled text defined in layout/master

--- a/index.html
+++ b/index.html
@@ -211,7 +211,7 @@
             ZipReader,
             ZipWriter,
         } from "https://deno.land/x/zipjs/index.js";
-        import { SvgRenderer, integerToRoman, Matrix, ShapeBuilder } from 'utils';
+        import { integerToRoman, Matrix, ShapeBuilder, SvgRenderer } from 'utils';
 
         const EMU_PER_PIXEL = 12700; // Standard conversion for 96 DPI
         const PT_TO_PX = .975; // Adjusted conversion for web rendering (90/72)
