--- a/index.html
+++ b/index.html
@@ -214,7 +214,7 @@
             ZipReader,
             ZipWriter,
         } from "https://deno.land/x/zipjs/index.js";
-        import { integerToRoman, Matrix, ShapeBuilder, SvgRenderer, parseXmlString, ColorParser } from 'utils';
+        import { integerToRoman, Matrix, ShapeBuilder, SvgRenderer, parseXmlString, ColorParser, ReactiveStore } from 'utils';
         import { parseChart, renderChart } from 'chart';
         import {
             EMU_PER_PIXEL,
@@ -236,48 +236,56 @@
         const loadingIndicator = document.getElementById( 'loading-indicator' );
         const debugOutput = document.getElementById( 'debug-output' );
 
-        function resolvePath(baseDir, target) {
-            // Normalize backslashes to forward slashes for cross-platform compatibility.
-            const normalizedTarget = target.replace(/\\/g, '/');
+        const initialPresentationState = {
+            status: 'idle', // idle, parsing, ready, error
+            slideSize: null,
+            theme: null,
+            error: null,
+        };
 
-            // If target is an absolute path (starts with '/'), it's relative to the zip root.
-            if (normalizedTarget.startsWith('/')) {
-                // Just remove the leading slash and return.
-                return normalizedTarget.substring(1);
+        function presentationReducer( state = initialPresentationState, action ) {
+            switch ( action.type ) {
+                case 'START_PRESENTATION':
+                    return { ...initialPresentationState, status: 'parsing' };
+                case 'SET_PRESENTATION_DATA':
+                    return { ...state, ...action.payload };
+                case 'SET_STATUS':
+                    return { ...state, status: action.payload };
+                case 'SET_ERROR':
+                    return { ...state, status: 'error', error: action.payload };
+                default:
+                    return state;
             }
-            // Otherwise, resolve it relative to the baseDir.
-            const path = baseDir + '/' + normalizedTarget;
-            const parts = path.split('/');
-            const resolved = [];
-            for (const part of parts) {
-                if (part === '..') {
-                    resolved.pop();
-                } else if (part !== '.' && part !== '') {
-                    resolved.push(part);
-                }
-            }
-            return resolved.join('/');
         }
 
-        async function getNormalizedXmlString(entriesMap, path) {
-            const entry = entriesMap.get(path);
-            if (!entry) return null;
+        const initialSlideState = {
+            slideNum: -1,
+            shapes: [],
+            background: null,
+            slideContext: null,
+        };
 
-            const writer = new TextWriter();
-            let xmlString = await entry.getData(writer);
-
-            // Strip BOM if present, as it can interfere with XML parsing on some platforms.
-            if (xmlString.charCodeAt(0) === 0xFEFF) {
-                xmlString = xmlString.substring(1);
+        function slideReducer( state = initialSlideState, action ) {
+            switch ( action.type ) {
+                case 'SET_SLIDE_DATA':
+                    return { ...state, ...action.payload };
+                default:
+                    return state;
             }
-
-            // Normalize line endings to prevent cross-platform parsing issues.
-            return xmlString.replace(/\\r\\n/g, '\n').replace(/\\r/g, '\n');
         }
+
+        const presentationStore = new ReactiveStore( {
+            initialState: initialPresentationState,
+            reducer: presentationReducer,
+        } );
+
+        const slideStores = [];
 
         fileInput.addEventListener( 'change', async ( event ) => {
             const file = event.target.files[ 0 ];
             if ( !file ) return;
+
+            presentationStore.dispatch( { type: 'START_PRESENTATION' } );
 
             fileInfo.textContent = `File selected: ${ file.name }`;
             outputContainer.style.display = 'block';
@@ -429,6 +437,45 @@
                 loadingIndicator.style.display = 'none';
             }
         } );
+
+        function resolvePath( baseDir, target ) {
+            // Normalize backslashes to forward slashes for cross-platform compatibility.
+            const normalizedTarget = target.replace( /\\/g, '/' );
+
+            // If target is an absolute path (starts with '/'), it's relative to the zip root.
+            if ( normalizedTarget.startsWith( '/' ) ) {
+                // Just remove the leading slash and return.
+                return normalizedTarget.substring( 1 );
+            }
+            // Otherwise, resolve it relative to the baseDir.
+            const path = baseDir + '/' + normalizedTarget;
+            const parts = path.split( '/' );
+            const resolved = [];
+            for ( const part of parts ) {
+                if ( part === '..' ) {
+                    resolved.pop();
+                } else if ( part !== '.' && part !== '' ) {
+                    resolved.push( part );
+                }
+            }
+            return resolved.join( '/' );
+        }
+
+        async function getNormalizedXmlString( entriesMap, path ) {
+            const entry = entriesMap.get( path );
+            if ( !entry ) return null;
+
+            const writer = new TextWriter();
+            let xmlString = await entry.getData( writer );
+
+            // Strip BOM if present, as it can interfere with XML parsing on some platforms.
+            if ( xmlString.charCodeAt( 0 ) === 0xFEFF ) {
+                xmlString = xmlString.substring( 1 );
+            }
+
+            // Normalize line endings to prevent cross-platform parsing issues.
+            return xmlString.replace( /\\r\\n/g, '\n' ).replace( /\\r/g, '\n' );
+        }
 
         async function getRelationships(entriesMap, path) {
             let xmlString = await getNormalizedXmlString(entriesMap, path);
