Removed self-closing slash from input element

--- a/index.html
+++ b/index.html
@@ -175,7 +175,7 @@
                         </svg>
                         <p><span>Click to upload</span> or drag and drop</p>
                         <p>PPTX file</p>
-                        <input id="pptx-file" type="file" accept=".pptx" />
+                        <input id="pptx-file" type="file" accept=".pptx">
                     </label>
                 </div>
                 <div id="file-info"></div>
