--- a/index.html
+++ b/index.html
@@ -104,6 +104,31 @@
             color: #6b7280;
         }
 
+        #view-container {
+            display: flex;
+            width: 100lvw;
+        }
+
+        .slide-selector-container {
+            width: 15rem;
+            height: 100%;
+            border: 1px solid #e5e7eb;
+            background-color: #fff;
+            box-shadow: 0 10px 15px -3px rgb(0 0 0 / 0.1), 0 4px 6px -4px rgb(0 0 0 / 0.1);
+            margin: 2rem auto;
+            position: relative;
+        }
+
+        #slide-viewer-container {
+            width: 100%;
+            height: 100%;
+            border: 1px solid #e5e7eb;
+            background-color: #fff;
+            box-shadow: 0 10px 15px -3px rgb(0 0 0 / 0.1), 0 4px 6px -4px rgb(0 0 0 / 0.1);
+            margin: 2rem auto;
+            position: relative;
+        }
+
         /* --- Slide Viewer & Debug Styling --- */
         .slide-viewer {
             width: 100%;
@@ -210,7 +235,10 @@
                     </svg>
                     <p>Rendering slides...</p>
                 </div>
-                <div id="slide-viewer-container"></div>
+                <div id="view-container">
+                    <div id="slide-selector-container"></div>
+                    <div id="slide-viewer-container"></div>
+                </div>
                 <div id="debug-output" style="display: none;"></div>
             </div>
         </div>
@@ -263,7 +291,8 @@
         const fileInput = document.getElementById('pptx-file');
         const fileInfo = document.getElementById('file-info');
         const outputContainer = document.getElementById('output-container');
-        const slideshowContainer = document.getElementById('slide-viewer-container');
+        const slideSelectorContainer = document.getElementById( 'slide-selector-container' );
+        const slideViewerContainer = document.getElementById('slide-viewer-container');
         const loadingIndicator = document.getElementById('loading-indicator');
         const debugOutput = document.getElementById('debug-output');
 
@@ -273,13 +302,14 @@
 
             fileInfo.textContent = `File selected: ${file.name}`;
             outputContainer.style.display = 'grid';
-            slideshowContainer.innerHTML = '';
+            slideSelectorContainer.innerHTML = '';
+            slideViewerContainer.innerHTML = '';
             debugOutput.style.display = 'none';
             loadingIndicator.style.display = 'grid';
             debugOutput.innerHTML = '';
 
             try {
-                const fileData = await slideshowHandler( { file, slideshowContainer } );
+                const fileData = await slideshowHandler( { file, slideViewerContainer: 'slide-viewer-container', slideSelectorContainer: 'slide-selector-container' } );
                 if ( fileData ) fileInfo.textContent += ` slideshow length: ${fileData?.slideshowLength}`;
             } catch (error) {
                 fileInfo.textContent = `Error: Could not parse presentation. ${error.message}`;
