--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <script type="importmap">
         {
             "imports": {
-                "zipjs": "https://deno.land/x/zipjs/index.js",
+                "zipjs": "https://deno.land/x/zipjs/index.js", 
                 "utils": "./src/utils/index.js",
                 "chart": "./src/renderers/chart.js",
                 "constants": "./src/constants.js"
@@ -245,8 +245,8 @@
     </div>
 
     <!-- Main application script -->
-    <script src="https://cdn.jsdelivr.net/npm/chart.js@4.2.0/dist/chart.umd.js"></script>
-    <script src="https://cdn.jsdelivr.net/npm/chartjs-plugin-datalabels@2.2.0/dist/chartjs-plugin-datalabels.min.js"></script>
+    <script src="./libraries/chartjs/chart.umd.min.js"></script>
+    <script src="./libraries/chartjs/chartjs-plugin-datalabels.min.js"></script>
     <script type="module">
         import { slideshowHandler } from './src/slideshowHandler.js';
 
