--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <script type="importmap">
         {
             "imports": {
-                "jszip": "https://cdn.jsdelivr.net/npm/jszip@3.10.1/+esm",
+                "jszip": "./libraries/jszip/index.js",
                 "utils": "./src/utils/index.js",
                 "chart": "./src/renderers/chart.js",
                 "constants": "./src/constants.js"
