Added not quite working set active element

--- a/index.html
+++ b/index.html
@@ -165,6 +165,10 @@
             font-weight: 500;
         }
 
+		svg .active-element {
+			outline: 2px solid #7DF9FF;
+		}
+
         /* Loading Spinner */
         @keyframes spin {
             from {
